[package]
name = "blockchain_pow"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.0"
hex = "0.4.3"
k256 = "0.13.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ripemd = "0.1.3"
rocksdb = "0.21.0"
serde = { version = "1.0.192", features = ["derive"] }
sha256 = "1.4.0"
